Ignore reference files

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,9 @@ paket-files/
 /TTTT/Ventuz Podiums/Movies/P-GAMEPLAY_NUMBER_01-WINNER.mov
 /TTTT/Ventuz Screens/Movies/08_TTTT_SCOREBOARD_01_h264.mov
 /TTTT/desktop.ini
+/Family Feud/Ventuz/TeamLogos
+/Family Feud/Ventuz/Movies/SYN_FEUD LOGO LOOP 2017.mov
+/Family Feud/Ventuz/Movies/Clock in reference.mp4
+/Family Feud/Ventuz/Movies/Clock in reference 2.mp4
+/Family Feud/Ventuz/Images/Bar sample 2.png
+/Family Feud/Ventuz/Images/Bar sample 1.png
