--- a/Barjonas.Common.Windows/packages.config
+++ b/Barjonas.Common.Windows/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ControlzEx" version="3.0.2.4" targetFramework="net48" />
-  <package id="MahApps.Metro" version="1.6.5" targetFramework="net48" />
-  <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
-  <package id="NLog" version="4.6.7" targetFramework="net48" />
+  <package id="ControlzEx" version="4.3.0" targetFramework="net48" />
+  <package id="MahApps.Metro" version="2.0.1" targetFramework="net48" />
+  <package id="MahApps.Metro.IconPacks" version="4.2.0" targetFramework="net48" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="NLog" version="4.7.2" targetFramework="net48" />
 </packages>
