--- a/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
+++ b/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
@@ -174,7 +174,7 @@
     <Compile Include="Converters\PipeRemover.cs" />
     <Compile Include="Converters\PluralConverter.cs" />
     <Compile Include="Converters\RadioButtonCheckedConverter.cs" />
-    <Compile Include="Converters\StringArrayConverter.cs" />
+    <Compile Include="Converters\EnumerableToStringConverter.cs" />
     <Compile Include="Converters\TimeChangeKindConverter.cs" />
     <Compile Include="Converters\TimeSpanToSecondsConverter.cs" />
     <Compile Include="Converters\TimeSpanToSentenceConverter.cs" />
