--- a/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
+++ b/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
@@ -10,6 +10,7 @@
     <NeutralLanguage>en-US</NeutralLanguage>
     <LangVersion>9.0</LangVersion>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+    <RootNamespace>Barjonas.Common</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
