--- a/Barjonas.Common.Standard/Barjonas.Common.Standard.csproj
+++ b/Barjonas.Common.Standard/Barjonas.Common.Standard.csproj
@@ -8,12 +8,13 @@
     <Authors>Hamish Barjonas</Authors>
     <Copyright>Barjonas LLC 2021</Copyright>
     <NeutralLanguage>en-US</NeutralLanguage>
+    <RootNamespace>Barjonas.Common</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="NLog" Version="4.7.10" />
-    <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
+    <PackageReference Include="NLog" Version="4.7.13" />
+    <PackageReference Include="System.Collections.Immutable" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
