--- a/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
+++ b/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
   </ItemGroup>
 
   <ItemGroup>
