--- a/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
+++ b/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <UseWpf>true</UseWpf>
     <UseWindowsForms>true</UseWindowsForms>
     <Company>Barjonas LLC</Company>
     <Authors>Hamish Barjonas</Authors>
-    <Copyright>Barjonas LLC 2021</Copyright>
+    <Copyright>Barjonas LLC 2022</Copyright>
     <NeutralLanguage>en-US</NeutralLanguage>
     <LangVersion>9.0</LangVersion>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
