--- a/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
+++ b/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0-windows;net48</TargetFrameworks>
+    <TargetFrameworks>net6.0-windows</TargetFrameworks>
     <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <UseWpf>true</UseWpf>
     <UseWindowsForms>true</UseWindowsForms>
@@ -9,7 +9,7 @@
     <Authors>Hamish Barjonas</Authors>
     <Copyright>Barjonas LLC 2022</Copyright>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <LangVersion>9.0</LangVersion>
+    <LangVersion>10.0</LangVersion>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
     <RootNamespace>Barjonas.Common</RootNamespace>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
