--- a/.editorconfig
+++ b/.editorconfig
@@ -161,4 +161,4 @@ end_of_line = crlf
 
 # IDE0160: Convert to file-scoped namespace
 csharp_style_namespace_declarations = file_scoped:warning
-dotnet_diagnostic.IDE0161.severity = warning
+dotnet_diagnostic.IDE0161.severity = error
