--- a/Barjonas.Common.Standard/Barjonas.Common.Standard.csproj
+++ b/Barjonas.Common.Standard/Barjonas.Common.Standard.csproj
@@ -12,6 +12,7 @@
     <NeutralLanguage>en-US</NeutralLanguage>
     <RootNamespace>Barjonas.Common</RootNamespace>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+    <Configurations>Debug;Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="MessagePackAnalyzer.json" />
@@ -22,9 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MessagePack" Version="2.4.59" />
-    <PackageReference Include="MessagePack.Annotations" Version="2.4.59" />
-    <PackageReference Include="MessagePackAnalyzer" Version="2.4.59">
+    <PackageReference Include="MessagePack" Version="2.5.108" />
+    <PackageReference Include="MessagePack.Annotations" Version="2.5.108" />
+    <PackageReference Include="MessagePackAnalyzer" Version="2.5.108">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
