--- a/Barjonas.Common.Standard/Barjonas.Common.Standard.csproj
+++ b/Barjonas.Common.Standard/Barjonas.Common.Standard.csproj
@@ -29,8 +29,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="NLog" Version="5.1.2" />
+    <PackageReference Include="NLog" Version="5.1.3" />
   </ItemGroup>
 
 </Project>
