Overhaul environment variables in projects and SetPath.bat files

--- a/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
+++ b/Barjonas.Common.Windows/Barjonas.Common.Windows.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="$(BARJONAS_SHARED)Barjonas.Common.Standard\Barjonas.Common.Standard.csproj" />
+    <ProjectReference Include="..\Barjonas.Common.Standard\Barjonas.Common.Standard.csproj" />
   </ItemGroup>
 
 </Project>
