--- a/GameshowPro.Common.JsonNet/GameshowPro.Common.JsonNet.csproj
+++ b/GameshowPro.Common.JsonNet/GameshowPro.Common.JsonNet.csproj
@@ -3,7 +3,6 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>GameshowPro.Common</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Platforms>AnyCPU;x64;ARM64;ARM32</Platforms>
     <LangVersion>preview</LangVersion>
     <Company>Barjonas LLC</Company>
@@ -11,24 +10,18 @@
     <Product>Gameshow Pro Common - cross-platform</Product>
     <PackageTags>GameshowPro Common</PackageTags>
     <Copyright>Barjonas LLC 2024</Copyright>
-    <Description>Gameshow Pro common class library.</Description>
+    <Description>Gameshow Pro utilities for Json.NET.</Description>
     <NeutralLanguage>en-US</NeutralLanguage>
     <RootNamespace>GameshowPro.Common</RootNamespace>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     <Configurations>Debug;Release</Configurations>
     <Nullable>enable</Nullable>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MessagePack" Version="2.5.140" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
-    <PackageReference Include="NLog" Version="5.2.8" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="3.6.133">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Docs\README.md" Pack="true" PackagePath="\"/>
+    <ProjectReference Include="..\GameshowPro.Common\GameshowPro.Common.csproj" />
   </ItemGroup>
 </Project>
