--- a/GameshowPro.Common.JsonNet/GameshowPro.Common.JsonNet.csproj
+++ b/GameshowPro.Common.JsonNet/GameshowPro.Common.JsonNet.csproj
@@ -20,6 +20,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.6.139">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GameshowPro.Common\GameshowPro.Common.csproj" />
