Add TargetFramework of net9.0

--- a/src/GameshowPro.Common.Windows/GameshowPro.Common.Windows.csproj
+++ b/src/GameshowPro.Common.Windows/GameshowPro.Common.Windows.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
     <UseWpf>true</UseWpf>
     <UseWindowsForms>true</UseWindowsForms>
     <PackageId>GameshowPro.Common.Windows</PackageId>
@@ -26,7 +26,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="System.ServiceProcess.ServiceController" Version="9.0.2" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
