--- a/src/GameshowPro.Common.JsonNet/GameshowPro.Common.JsonNet.csproj
+++ b/src/GameshowPro.Common.JsonNet/GameshowPro.Common.JsonNet.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <RootNamespace>GameshowPro.Common</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Platforms>AnyCPU;x64;ARM64;ARM32</Platforms>
@@ -18,7 +18,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.7.115">
       <PrivateAssets>all</PrivateAssets>
