--- a/src/GameshowPro.Common/GameshowPro.Common.csproj
+++ b/src/GameshowPro.Common/GameshowPro.Common.csproj
@@ -15,13 +15,13 @@
     <NeutralLanguage>en-US</NeutralLanguage>
     <RootNamespace>GameshowPro.Common</RootNamespace>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
-    <Configurations>Debug;Release</Configurations>
+    <Configurations>Debug;Release;LinuxRelease</Configurations>
     <Nullable>enable</Nullable>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MessagePack" Version="3.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.5" />
     <PackageReference Include="Nerdbank.GitVersioning" Version="3.7.115">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
