--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,6 +64,7 @@ jobs:
         path: |
           ${{ env.PUBLISH_PATH }}/*.nupkg
           ${{ env.PUBLISH_PATH }}/*.snupkg
+        retention-days: 3
 
   Release_And_Push:
     name: Release and push packages
