Add .net 10 build

--- a/src/GameshowPro.Common/GameshowPro.Common.csproj
+++ b/src/GameshowPro.Common/GameshowPro.Common.csproj
@@ -2,7 +2,7 @@
   <Choose>
     <When Condition="'$(Configuration)' == 'ReleaseWindows' OR '$(Configuration)' == 'DebugWindows'">
       <PropertyGroup>
-        <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
+        <TargetFrameworks>net8.0-windows;net9.0-windows;net10.0-windows</TargetFrameworks>
         <DefineConstants>$(DefineConstants);WPF</DefineConstants>
         <Product>Gameshow Pro Common - Windows version</Product>
         <PackageTags>GameshowPro Common Windows</PackageTags>
@@ -16,7 +16,7 @@
     </When>
     <Otherwise>
       <PropertyGroup>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
         <Product>Gameshow Pro Common - cross-platform</Product>
         <PackageTags>GameshowPro Common</PackageTags>
         <PackageId>GameshowPro.Common</PackageId>
